@@ -1,3 +1,6 @@
+2016-02-02
+Dungeon saving works
+
 2016-02-01
 Got dungeon loading working!
 
